old slurm/slurm-4959.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
src/direct_cuda_pattern.cc:46:29: error: use of undeclared identifier 'abs_function'
    std::cout << "ABS: " << abs_function( ug_initial.data() ) << std::endl;
                            ^
1 error generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1

real	0m0.015s
user	0m0.004s
sys	0m0.008s
